# VKCOM-Job-Parser

./: .gitignore  README.md  database.py  diff.py  download.py  job_model.py  main.py  parse.py  pyproject.toml
sql/: create_table_jobs.sql  insert_new_jobs.sql  select_jobs.sql
