[tool.poetry]
name = "vkcom-job-parser"
version = "1.0.0"
description = "Парсер вакансий ВКонтакте"
authors = ["Danil Ovchinnikov <Danil42Worker@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DanilBox/VKCOM-Job-Parser"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
lxml = "^4.9.2"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.black]
# File filtering is taken care of in pre-commit.
line-length = 120
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
