[tool.poetry]
name = "vkcom-job-parser"
version = "1.0.0"
description = "Парсер вакансий ВКонтакте"
authors = ["Danil Ovchinnikov <Danil42Worker@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DanilBox/VKCOM-Job-Parser"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
lxml = "^4.9.3"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
types-beautifulsoup4 = "^4.12.0.5"
types-requests = "^2.31.0.2"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = 3.11
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
